# AquaVeritas

./: .env.example  .gitignore  Dockerfile.dashboard  Dockerfile.sim  README.md  SETUP.md  docker-compose.yaml  init_environment
aquaveritas/: .gitignore  PRODUCT.md  README.md  pyproject.toml
aquaveritas/.streamlit/: secrets.toml.example
aquaveritas/app/: app.py
aquaveritas/app_web/: .gitignore  package-lock.json  package.json
aquaveritas/app_web/src/app/: globals.css  layout.tsx  page.tsx
aquaveritas/app_web/src/components/: Footer.tsx  Globe.tsx  GlobeInferencePanel.tsx  InferenceRunner.tsx
aquaveritas/configs/: aquaveritas_finetune_modal.yaml
aquaveritas/data/reports/: AquaVeritas_Eval_Report_2026-05-04.md
aquaveritas/docs/: COMMANDS.md  DEMO_SCRIPT.md  generate_eval_report.py  generate_eval_report_md.py  generate_incident_report.py  generate_postmortem_pdf.py
aquaveritas/docs/database_queries/: TRIAGE_CHECK.sql  check_crop_stress_types.sql  image_quality.sql  missing_agriculture_labels.sql  missing_images.sql  omo_turkana_check.sql  reset_records_for_requeuing.sql  unlabeled_records.sql  vector_table.sql  view_unlabeled_records.sql
aquaveritas/hf_space/: Dockerfile  README.md  app.py  db_lite.py
aquaveritas/hf_space/.streamlit/: config.toml
aquaveritas/scripts/: collect_data.py  compare_models.py  convert_gguf_modal.py  copy_web_samples.py  evaluate.py  export_onnx.py  export_sqlite.py  finetune.py  label_data.py  leap_bundle_modal.py  predict.py  resize_images.py  test_prose.py  test_prose_qwen.py  train.py  triage_images.py
aquaveritas/src/aquaveritas/: __init__.py  annotator.py  db.py  evaluator.py  locations.py  prose.py  simsat.py
(+55 files in other folders)
